# core-ball-ision

./: .gitignore  CMakeLists.txt  README.md  run.sh  start.sh
include/: auto_clicker.h  game_controller.h  game_state.h  rotation_tracker.h  screen_capture.h  vision_detector.h  visualizer.h
src/: auto_clicker.cpp  game_controller.cpp  main.cpp  rotation_tracker.cpp  screen_capture.cpp  vision_detector.cpp  visualizer.cpp
